2017-06-27  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/subsasgn.m: Add (currently failing) unit tests

	* arrays/@stk_dataframe/subsasgn.m: Add (currently failing) unit
	tests for the insertion of row/column names on data frames that
	have none.

	@stk_model_gpposterior/stk_model_gpposterior.m: Check 'prior_model' arg

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Check that
	input argument 'prior_model' is a structure.

	Logical-valued operators now return logical values on df as well

	* arrays/@stk_dataframe/and.m: Return logical result.
	* arrays/@stk_dataframe/eq.m: Idem.
	* arrays/@stk_dataframe/ge.m: Idem.
	* arrays/@stk_dataframe/gt.m: Idem.
	* arrays/@stk_dataframe/le.m: Idem.
	* arrays/@stk_dataframe/lt.m: Idem.
	* arrays/@stk_dataframe/ne.m: Idem.
	* arrays/@stk_dataframe/or.m: Idem.
	* arrays/@stk_dataframe/xor.m: Idem.
	* arrays/@stk_dataframe/not.m: New function.
	* admin/octpkg/INDEX: Add new function to the INDEX.

2017-06-26  Remi Stroh  <remi.stroh@lne.fr>

	stk_distrib_normal_crps.m: Make unit test deterministic (ticket #77)

	* misc\distrib\stk_distrib_normal_crps.m: Replace the random
	selection of data with fixed data.

	stk_distrib_normal_crps.m: Change the final test (ticket #77)

	* misc\distrib\stk_distrib_normal_crps.m: Modify the last test
	to support compatibility with older versions of Matlab and
	Octave.

2017-06-26  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/set.m: Check colnames and rownames values more strictly

	* arrays/@stk_dataframe/set.m: Reject colnames and rownames values
	with an insufficient number of elements.

	@stk_dataframe/subsref.m: Fix empty indexing

	* arrays/@stk_dataframe/subsref.m: Fix empty indexing.

	@stk_dataframe/stk_dataframe.m: Fix typo

	* arrays/@stk_dataframe/stk_dataframe.m: Fix typo.

2017-06-25  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/fieldnames.m: Add row names to the list
